--- a/src/components/Layout/layout.module.css
+++ b/src/components/Layout/layout.module.css
@@ -1,4 +1,4 @@
-/* import styles frpm '../../utils/styles/variables.scss'; */
+
 
 .header {
   display: flex;
@@ -6,4 +6,9 @@
   height: 10vh;
   padding-left: 1rem;
   background-color: #7fb6f3;
+  color: white;
+}
+
+.title {
+  letter-spacing: 3px;
 }
