--- a/pages/addOrEditPost/addOrEditPost.module.scss
+++ b/pages/addOrEditPost/addOrEditPost.module.scss
@@ -8,3 +8,14 @@
 .form1 {
     margin-top: 2rem;
 }
+
+.submit{
+    margin: 1rem;
+}
+
+.formContainer {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+    padding-bottom: 4rem;
+  }
