--- a/pages/influencerContent/influencerContent.module.scss
+++ b/pages/influencerContent/influencerContent.module.scss
@@ -17,9 +17,9 @@
 
   .image{
       display: flex;
-      justify-content: center;
       flex-wrap: wrap;
-      
+      width: 95%;
+      margin: auto;
       margin-bottom:4rem;   
   }
 
