--- a/utils/sharedComponents/uploadBox/upladBox.module.scss
+++ b/utils/sharedComponents/uploadBox/upladBox.module.scss
@@ -17,6 +17,10 @@
     }
     p {
       text-align: center;
+      word-break: break-word;
+    }
+    .filename {
+    color: blue;
     }
     input {
       position: absolute;
