--- a/pages/home/home.module.scss
+++ b/pages/home/home.module.scss
@@ -9,7 +9,7 @@
     background-color: black;
     padding-top:1px;
   }
-  .connect{
+  .subHeading{
     font-weight: bold;
     font-size:18px;
     margin-left:1rem;
@@ -32,6 +32,7 @@
     position: relative;
     margin-top: 4rem;
     padding: 0.5rem;
+
   }
   
   .menu {
@@ -127,18 +128,14 @@
     }
   }
   .unlock{
-      border-radius: 8px;
-      bottom: 8px;
-      position: absolute;
-      background-color: orange;
-      display: block;
-      cursor: pointer;
-      width: 80%;
-      color: white;
-      text-align: center;
-      padding: 0.3rem;
-      left: 50%;
-      transform: translateX(-50%);
+    border-radius: 8px;
+    background-color: orange;
+    cursor: pointer;
+    color: white;
+    text-align: center;
+    padding: 0.5rem;
+    width: 100%;
+    margin: 0;
   }
   .alt{
     margin:3rem 4rem;  
@@ -147,11 +144,14 @@
     background-color:#FFC107;
   }
   
-  
+  .imgTitle{
+    margin-left: 1rem;
+  }
   
   .scroll{
     border-radius: 12px;
-    height:10rem;
+    // height:10rem;
+    padding:1rem;
     margin: 0 1rem;
     position:relative;
     background-color:#EEEEEE;
