--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -5,7 +5,7 @@
     align-items: center;
     height: 10vh;
     padding-left: 1rem;
-    background-color: #7fb6f3;
+    background-image: linear-gradient(to right, red, red, orangered);
     color: white;
   }
   
