--- a/pages/styles.scss
+++ b/pages/styles.scss
@@ -24,7 +24,8 @@
 
   body {
     margin:0;
-
+    min-height: 100vh;
+    position: relative;
   }
   
   input[type=text],input[type=number], select, textarea {
