--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -1,5 +1,5 @@
 .footer {
-    background-image: url(../../../assets/images/footer-bg-v3.jpg);
+    background-image: linear-gradient(to right, red ,red, orangered);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -11,7 +11,7 @@
         a{
             color: white;
             padding: 0 1rem;
-            line-height: 3;
+            line-height: 1.5;
         }
     }
 
