--- a/pages/service-history1/service-history1.module.scss
+++ b/pages/service-history1/service-history1.module.scss
@@ -9,7 +9,7 @@
     grid-template-columns:1fr 1fr 1fr; 
     grid-template-rows: 0.1fr 0.5fr  1.5fr 0.5fr 1fr 1fr 1fr;
     grid-template-areas: "head1 head1 head1" "head2 head2 head2" "total bal paid" "head3 head3 head3" "detail detail detail" "detail2 detail2 detail2" "detail3 detail3 detail3";
-  grid-gap:0.4rem;
+  grid: gap 0.4rem;
   }
   #head1{
   
