--- a/pages/service-history1/service-history1.module.scss
+++ b/pages/service-history1/service-history1.module.scss
@@ -2,83 +2,79 @@
 //     --main-radius:5px;
 //     --main-padding:5px;
 //   }
-  .container{
-    display:grid;
-    height:120vh;
-    padding: 10px;
-    grid-template-columns:1fr 1fr 1fr; 
-    grid-template-rows: 0.1fr 0.5fr  1.5fr 0.5fr 1fr 1fr 1fr;
-    grid-template-areas: "head1 head1 head1" "head2 head2 head2" "total bal paid" "head3 head3 head3" "detail detail detail" "detail2 detail2 detail2" "detail3 detail3 detail3";
-  grid: gap 0.4rem;
+.container {
+  display: grid;
+  height: 120vh;
+  padding: 10px;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 0.1fr 0.5fr 1.5fr 0.5fr 1fr 1fr 1fr;
+  grid-template-areas: "head1 head1 head1" "head2 head2 head2" "total bal paid" "head3 head3 head3" "detail detail detail" "detail2 detail2 detail2" "detail3 detail3 detail3";
+  grid-gap: 0.7rem;
+}
+#head1 {
+  grid-area: head1;
+}
+#head2 {
+  grid-area: head2;
+}
+#head3 {
+  grid-area: head3;
+}
+#total {
+  text-align: center;
+  background-color: rgb(106, 189, 194);
+  grid-area: total;
+  border-radius: 20px;
+  padding-top: 5px;
+}
+#paid {
+  text-align: center;
+  background-color: rgb(211, 115, 211);
+  grid-area: paid;
+  border-radius: 20px;
+  padding-top: 5px;
+}
+#bal {
+  text-align: center;
+  background-color: rgba(231, 182, 91, 0.938);
+  grid-area: bal;
+  border-radius: 20px;
+  padding-top: 5px;
+}
+#detail {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  background-color: rgb(170, 119, 128);
+  grid-area: detail;
+  border-radius: 20px;
+  padding-top: 5px;
+}
+#detail2 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  background-color: rgb(170, 119, 128);
+  grid-area: detail2;
+  border-radius: 20px;
+  padding-top: 5px;
+}
+#detail3 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  background-color: rgb(170, 119, 128);
+  grid-area: detail3;
+  border-radius: 20px;
+  padding-top: 5px;
+}
+.column {
+  float: left;
+  width: 50%;
+  padding: 10px;
+  /* Should be removed. Only for demonstration */
+}
+@media only screen and (max-width: 550px) {
+  .container {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 0.2fr 0.5fr 1.5fr 1.5fr 0.5fr 1fr 1fr 1fr;
+    grid-template-areas: "head1 head1" "head2 head2" "total total" "bal paid" "head3 head3" "detail detail" "detail2 detail2" "detail3 detail3";
   }
-  #head1{
-  
-    grid-area:head1;
-  }
-  #head2{
-   
-    grid-area:head2;
-  }
-  #head3{
-  
-    grid-area:head3;
-  }
-  #total{
-      text-align: center;
-    background-color: rgb(106, 189, 194);
-      grid-area:total;
-    border-radius: 20px;
-    padding-top: 5px;
-  }
-  #paid{
-    text-align: center;
-    background-color:rgb(211, 115, 211);
-    grid-area:paid;
-    border-radius: 20px;
-    padding-top: 5px;
-  }
-  #bal{
-    text-align: center;
-    background-color:rgba(231, 182, 91, 0.938);
-    grid-area:bal;
-    border-radius: 20px;
-    padding-top: 5px;
-  }
-  #detail{
-    display:grid;
-    grid-template-columns:1fr 1fr;
-    background-color:rgb(170, 119, 128);
-    grid-area:detail;
-    border-radius: 20px;
-    padding-top: 5px;
-  }
-  #detail2{
-    display:grid;
-    grid-template-columns:1fr 1fr;
-    background-color:rgb(170, 119, 128);
-    grid-area:detail2;
-    border-radius: 20px;
-    padding-top: 5px;
-  }
-  #detail3{
-    display:grid;
-    grid-template-columns:1fr 1fr;
-    background-color:rgb(170, 119, 128);
-    grid-area:detail3;
-    border-radius: 20px;
-    padding-top: 5px;
-  }
-  .column {
-    float: left;
-    width: 50%;
-    padding: 10px;
-     /* Should be removed. Only for demonstration */
-  }
-  @media only screen and (max-width: 550px) {
-    .container{
-    grid-template-columns:1fr 1fr;
-    grid-template-rows:0.2fr 0.5fr  1.5fr 1.5fr 0.5fr 1fr 1fr 1fr ;
-    grid-template-areas:"head1 head1" "head2 head2" "total total" "bal paid" "head3 head3" "detail detail" "detail2 detail2" "detail3 detail3";
-    }
-  }
-  
+}
