--- a/pages/influencer/home.module.scss
+++ b/pages/influencer/home.module.scss
@@ -68,7 +68,7 @@
     position: absolute;
     left: 0.5rem;
     top:0.5rem;
-    background-image:url("https://static.dezeen.com/uploads/2021/06/elon-musk-architect_dezeen_1704_col_1.jpg");
+    background-image:url("../../assets/images/defaultprof.jpg");
       background-position: center;
     background-repeat: no-repeat; 
     background-size: cover; 
