--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -1,12 +1,17 @@
 
 
 .header {
-    display: flex;
-    align-items: center;
-    height: 10vh;
-    padding-left: 1rem;
-    background-image: linear-gradient(to right, red, red, orangered);
-    color: white;
+  display: flex;
+  -moz-box-align: center;
+  align-items: center;
+  /* height: 10vh; */
+  width: 100vw;
+  padding-left: 1rem;
+  color: white;
+  /* border-bottom: 0.5px solid black; */
+  padding-bottom: 0.51rem;
+  box-shadow: 0px 5px 8px rgb(0 0 0 / 7%);
+  background-color: white;
   }
   
   .title {
