--- a/pages/login.module.scss
+++ b/pages/login.module.scss
@@ -4,9 +4,11 @@
     background: #FFFFFF;
     max-width: 360px;
     margin: 0.5rem;
+    margin-top: 3rem;
     padding: 45px;
     text-align: center;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+    border-radius: 18px;
   }
   .form input {
     font-family: "Roboto", sans-serif;
@@ -23,7 +25,7 @@
     font-family: "Roboto", sans-serif;
     text-transform: uppercase;
     outline: 0;
-    background: #7fb6f3;
+    background: red;
     width: 100%;
     border: 0;
     padding: 15px;
@@ -34,12 +36,12 @@
     cursor: pointer;
   }
   .form button:hover,.form button:active,.form button:focus {
-    background: rgb(52, 157, 250);;
+    background: rgb(250, 108, 52);;
   }
 
   
   .overallContainer {
-    background: rgb(188, 236, 224); /* fallback for old browsers */
+    background: hsl(240deg 6% 87% / 64%); /* fallback for old browsers */
     // background: -webkit-linear-gradient(right, #76b852, #8DC26F);
     // background: -moz-linear-gradient(right, #76b852, #8DC26F);
     // background: -o-linear-gradient(right, #76b852, #8DC26F);
@@ -50,6 +52,11 @@
     height: 100vh;
     width: 100vw;
     display: flex;
-    justify-content: center;
+    // justify-content: center;
     align-items: center;
+    flex-direction: column;
+  }
+
+  .signUpMessage{
+    margin-top: 4rem;
   }
