--- a/pages/styles.scss
+++ b/pages/styles.scss
@@ -45,10 +45,11 @@
   }
   
   input[type=submit], button {
-    background-color:#7fb6f3;
+    background-color:red;
     padding: 12px 20px;
     border: none;
     border-radius: 4px;
+    color: white;
     cursor: pointer;
     float: right;
   }
