--- a/pages/profile/profile.module.scss
+++ b/pages/profile/profile.module.scss
@@ -1,3 +1,7 @@
+.container {
+  padding-bottom: 4rem;
+}
+
 .title {
   color: white;
   letter-spacing: 1px;
@@ -14,7 +18,7 @@
 }
 
 .subTitle {
-  color: orange;
+  color: orange; 
   font-size: 0.8rem;
   text-align: center;
 }
