--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -9,9 +9,10 @@
   padding-left: 1rem;
   color: white;
   /* border-bottom: 0.5px solid black; */
-  padding-bottom: 0.51rem;
+  padding: 0.51rem;
   box-shadow: 0px 5px 8px rgb(0 0 0 / 7%);
   background-color: white;
+  justify-content: space-between;
   }
   
   .title {
