--- a/pages/service-history/service-history.module.scss
+++ b/pages/service-history/service-history.module.scss
@@ -35,6 +35,12 @@
             }
         }
     }
+    .cardpayments {
+        width: 90%;
+        display: -moz-box;
+        display: flex;
+        margin: auto;
+    }
 
     .pendingItem {
         display: flex;
