--- a/src/components/Menu/menu.module.scss
+++ b/src/components/Menu/menu.module.scss
@@ -8,8 +8,8 @@
     border-top: 0.5px solid grey;
     background-color: white;
     justify-content: space-around;
+    height: 80px
   }
-
   
   .svg:hover {
     fill: red;
