--- a/pages/influencerContent/influencerContent.module.scss
+++ b/pages/influencerContent/influencerContent.module.scss
@@ -20,7 +20,19 @@
       flex-wrap: wrap;
       width: 95%;
       margin: auto;
-      margin-bottom:4rem;   
+      margin-bottom:4rem; 
+      cursor: pointer;  
+  }
+  .imageIconWrapper {
+    position: relative;
+  }
+  .imageIcon {
+    position: absolute;
+    z-index: 1;
+    top: 0px;
+    margin: 2px;
+    background: #A9A9A9;
+    cursor: pointer;
   }
 
   .imgList {
