--- a/pages/addOrEditPost/addOrEditPost.module.scss
+++ b/pages/addOrEditPost/addOrEditPost.module.scss
@@ -13,6 +13,10 @@
     margin: 1rem;
 }
 
+.videoWrapper {
+    width: 400px;
+    display: inline-block;
+}
 .formContainer {
     border-radius: 5px;
     background-color: #f2f2f2;
