fxing loging css

--- a/pages/home.module.scss
+++ b/pages/home.module.scss
@@ -82,6 +82,7 @@
     margin-top: -1px;
     svg {
       fill: #fff !important;
+      color: #fff;
     }
   }
   .coverStyleContainer {
@@ -90,6 +91,7 @@
     margin-top: -1px;
     svg {
       fill: #000 !important;
+      color: #000;
     }
   }
   .coverStyleWrapper {
