--- a/pages/login.module.scss
+++ b/pages/login.module.scss
@@ -25,7 +25,7 @@
     font-family: "Roboto", sans-serif;
     text-transform: uppercase;
     outline: 0;
-    background: red;
+    background: #ed1b24;
     width: 100%;
     border: 0;
     padding: 15px;
