--- a/pages/styles.module.scss
+++ b/pages/styles.module.scss
@@ -16,7 +16,7 @@
 .receiptId {
   margin: 0px;
   font-size: 10px;
-  color: #a00;
+  color: #ed1b24;
 }
 .receiptSummaryWrapper {
   background-color: rgb(245, 61, 15, 0.3);
