--- a/pages/home.module.scss
+++ b/pages/home.module.scss
@@ -73,6 +73,7 @@
       margin-top: 40px;
       font-size: 14px;
     }
+
   }
   .LoginIcon {
     width: 24px;
@@ -139,19 +140,29 @@
       justify-content: center;
     }
     margin-top: 20px;
+
+    .userPostIcon {
+      width: 16px;
+      height: 16px;
+      fill: #999898;
+    }
   }
   .userPostDetailsWrapper {
     padding-right: 10px;
     @media (min-width: 1024px) {
       padding-right: 40px;
     }
+    &:last-child {
+      padding-right: 0px;
+    }
+   
   }
   .userPostCount {
     font-size: 20px;
   }
   .userPostType {
     font-size: 10px;
-    color: #686666;
+    color: #999898;
     font-weight: bold;
   }
   .menu {
@@ -501,10 +512,9 @@
 .subscriptionDiscount {
   padding: 2px;
   font-size: 12px;
-  border: 1px solid rgb(58, 99, 58, 0.5);
+  border: 1px solid rgba(125, 242, 125, 0.5);
   border-radius: 2px;
   width: 100px;
-  background-color: rgb(130, 193, 130, 0.5);
   text-align: center;
   color: rgb(58, 99, 58);
 }
