--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -1,5 +1,5 @@
 .footer {
-    background-image: linear-gradient(to right, red ,red, orangered);
+    background-image: linear-gradient(to right, #ed1b24 ,#ed1b24, #ed1b24);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
