--- a/pages/home.module.scss
+++ b/pages/home.module.scss
@@ -72,6 +72,13 @@
       padding-top: 10px;
       margin-top: 40px;
       font-size: 14px;
+      margin-bottom:4px ;
+    }
+
+    .userName {
+      color: #999898;
+      font-size: 10px;
+      margin-bottom:10px ;
     }
 
   }
@@ -123,7 +130,7 @@
   }
   .contentSection {
     background-color: white;
-    margin-top: 40px;
+    margin-top: 50px;
   }
   .userButtonWrapper {
     width: 100%;
@@ -479,6 +486,7 @@
 .subscription {
   width: 100%;
   max-height: 40vh;
+  padding-right: 20px;
   overflow: scroll;
   display: block;
 }
@@ -488,7 +496,7 @@
   margin-top: 5px;
   padding: 0px;
   line-height: 20px;
-  font-size: 18px;
+  font-size: 14px;
   font-weight: bold;
   color: rgb(136, 133, 133);
 }
@@ -513,16 +521,16 @@
 .subscriptionDiscount {
   padding: 2px;
   font-size: 12px;
-  border: 1px solid rgba(125, 242, 125, 0.5);
+  border: 2px solid rgb(78, 195, 78);
   border-radius: 2px;
   width: 100px;
   text-align: center;
-  color: rgb(58, 99, 58);
+  color: rgb(78, 195, 78);
 }
 
 .subscriptionDesc {
   margin-top: 10px;
-  font-size: 12px;
+  font-size: 10px;
   color: rgb(136, 133, 133);
 }
 
