--- a/pages/home.module.scss
+++ b/pages/home.module.scss
@@ -463,6 +463,7 @@
   padding: 5px 10px;
   margin-bottom: 20px;
   cursor: pointer;
+  margin-right: 10%;
 }
 
 .subscriptionWrapperActive {
@@ -470,6 +471,7 @@
   border-radius: 5px;
   padding: 5px 10px;
   margin-bottom: 20px;
+  margin-right: 10%;
 }
 
 .subscriptionHeadingWrapper {
