--- a/src/components/Menu/menu.module.scss
+++ b/src/components/Menu/menu.module.scss
@@ -11,7 +11,12 @@
     height: 80px;
     z-index: 1000;
   }
-  
+  .footerMenu {
+    height: 40px;
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+  }
   .svg:hover {
     fill: red;
   }
