--- a/pages/creator/influencer.home.module.scss
+++ b/pages/creator/influencer.home.module.scss
@@ -149,6 +149,13 @@ $font: 'Roboto', sans-serif;
         text-align: center;
       }
     }
+  }  
+}
+.loadMoreButtonWrapper {
+  text-align: center;
+  padding: 10px;
+  margin-bottom: 10px;
+  button {
+    float: none;
   }
-  
 }
