--- a/src/components/layout/influencer.layout.module.scss
+++ b/src/components/layout/influencer.layout.module.scss
@@ -51,3 +51,52 @@ $font: 'Roboto', sans-serif;
   padding: 10px 40px;
 }
 
+.profileMenuWrapper{
+  position: absolute;
+  display: block;
+  top: 100px;
+  right: 20px;
+  z-index: 100000;
+  background: #fff;
+  box-shadow:  0 0 20px  rgba(129, 128, 128, 0.5);
+  -moz-box-shadow: 0 0 20px  rgba(129, 128, 128, 0.5);
+  -webkit-box-shadow: 0 0 20px  rgba(129, 128, 128, 0.5);
+  -o-box-shadow: 0 0 20px  rgba(129, 128, 128, 0.5);
+  padding: 10px;
+  border-radius: 5px;
+
+  ul {
+    margin: 0px;
+    padding: 5px;
+    li {
+      padding: 10px 0px;
+      list-style: none;
+      border-bottom: 0.25px solid rgba(129, 128, 128, 0.5);
+
+      &:last-child {
+        border-bottom: 0px;
+      }
+    }
+  }
+}
+
+
+.superAdminWrapper {
+  top: 0px;
+  display: flex;
+  background-color: rgba(0,0,0, 0.5);
+  color: #fff;
+  padding: 5px;
+  font-size: 12px;
+  margin: 0px;
+  width: 100%;
+  justify-content: space-between;
+  h3 {
+    display: inline;
+    margin: 5px;
+  }
+  a {
+    color: #fff;
+    line-height: 20px;
+  }
+}
