--- a/src/components/layout/influencer.layout.module.scss
+++ b/src/components/layout/influencer.layout.module.scss
@@ -1,6 +1,6 @@
 $font: 'Roboto', sans-serif;
 #container {
-  background-color: rgb(207, 238, 254, 0.4);
+  background-color: #fff;
   //background-color: #000;
   width: 100%;
   min-height: 100vh;
@@ -19,12 +19,19 @@ $font: 'Roboto', sans-serif;
 .Header {
   display: flex;
   justify-content: space-between;
+  border-bottom: 1px solid #cdcdcd;
+  
   .menuWrapper {
     @extend .iconWhiteWrapper;
     display: none;
   }
   .logoWrapper {
-    margin-top: -10px;
+    margin-top: 2px;
+    max-width: 200px;
+    .logo {
+      width: 100%;
+      max-height: 20px;
+    }
   }
   .profileIconWrapper {
     @extend .iconWhiteWrapper
